ec2.tf
resource "aws_instance" "ec2-demo"{
   ami = "ami-016a78934c9cfa396"
   instance_type = "t2.micro"

   tags = {                                
     Name = "demo-server1"

}
}
